update swagger login
